# generate_daily_report

./: .env.scheduler.example  .evomap-node.local.json  .gitignore  README.md  app_paths.py  async_utils.py  auth_recovery_playwright.py  auth_repair.py  autodatareport-cli.spec  autodatareport-gui.spec  browser_auth_refresh.py  build_exe.bat  config.example.yaml  config_migration.py  export_870_range_table.py  extra_auth.py  extra_metrics_render.py  extra_metrics_service.py  feishu_doc.py  fenxi_auth_from_har.py  generate_daily_report.py  pc_auth_from_har.py  pc_web_metrics_service.py  publish_state.py  pyproject.toml  readiness.py  report_launcher_gui.py  report_launcher_gui.py.backup-20260312  requirements.txt  run_lock.py  tz_compat.py  version_info.txt  wecom_longbot.py  wecom_longbot_probe.py
.claude-design/slide-previews/: style-a.html  style-b.html  style-c.html
.github/workflows/: quality.yml
autodatareport/: __init__.py  application.py  atomic_io.py  cache.py  contracts.py  events.py  gui_runtime.py  gui_task_controller.py  models.py  orchestrator.py  pipeline.py  process_runner.py  publishing.py  redaction.py
docs/: auth_repair.md
scripts/: prepare_internal_defaults.py  run_auth_prep.ps1  run_daily_report.ps1  run_daily_report.sh  write_release_manifest.py
slides/: ai-workflow-defense-v1.html  ai-workflow-defense-v10.html  ai-workflow-defense-v11.html  ai-workflow-defense-v12.html  ai-workflow-defense-v13.html  ai-workflow-defense-v14.html  ai-workflow-defense-v15.html  ai-workflow-defense-v16.html  ai-workflow-defense-v17.html  ai-workflow-defense-v2.html  ai-workflow-defense-v3.html  ai-workflow-defense-v4.html  ai-workflow-defense-v5.html  ai-workflow-defense-v6.html  ai-workflow-defense-v7.html  ai-workflow-defense-v8.html  ai-workflow-defense-v9.html  publish-p3.sh
slides/p3-site/: run-p3slides.sh
templates/: pc_report_template.j2
tests/: test_auth_har_selection.py  test_auth_preflight.py  test_feishu_doc_retry.py  test_gui_workflow.py  test_no_publish_smoke.py  test_pc_report_render.py  test_process_runner.py  test_runtime_safety.py  test_v13_runtime.py  test_v14_auth_targets.py  test_v14_config_migration.py  test_v14_readiness.py  test_v15_runtime.py  test_wecom_longbot.py
