[project]
name = "report-automation"
version = "0.1.0"
description = "Daily cloud gaming report generator"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.9.0",
    "Jinja2>=3.1.4",
    "matplotlib>=3.8.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "websockets>=12.0",
    "python-socks>=2.8.0",
    "browser-cookie3>=0.20.1",
    "playwright>=1.58.0",
]
