[project]
name = "report-automation"
version = "1.4.0"
description = "Daily cloud gaming report generator"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.9.0",
    "Jinja2>=3.1.4",
    "matplotlib>=3.8.0",
    "httpx>=0.27.0",
    "Pillow>=12.3.0",
    "websockets>=12.0",
    "python-socks>=2.8.0",
    "browser-cookie3>=0.20.1",
    "playwright>=1.58.0",
]

[dependency-groups]
build = ["pyinstaller==6.20.0", "setuptools>=83.0.0"]
dev = ["pip-audit>=2.9.0", "pytest>=8.0.0", "ruff>=0.11.0", "setuptools>=83.0.0"]
